@@ -66,6 +66,9 @@
 	Remove background commands from the :jobs list when corresponding
 	processes get terminated by a signal.
 
+	Use <exe file location>/data/colors as global storage of color schemes on
+	Windows.  Thanks to r44083.
+
 	Fixed redirecting stdout of background commands to /dev/null, which could
 	be unwritable descriptor.  Thanks to c02y.
 
